desktop heading section and cards

--- a/index.html
+++ b/index.html
@@ -19,5 +19,24 @@
             </div>
         </div>
     </div>
+    <div class="subheading-section">
+        <div class="container">
+            <p> Wait a minute, Doc. What are you talking about? What happens to us in the future? What do we become assholes or something? Well uh, good, fine.</p>
+        </div>
+    </div>
+    <div class="grid-section">
+        <div class="container">
+            <div class="content">
+                <p class="number">1</p>
+                <div class="text">
+                    <h2>MARTY YOU GOTTA</h2>
+                    <p>There's that word again, heavy. Why are things so heavy in future? Is there a problem with the Earth's gravitational pull? We never would have fallen in love. No, get out of town, my mom thinks I'm going  camping with the guys. </p>
+                </div>
+                <img src="./images/step-1.jpg" alt="">
+                <img src="./images/step-2.jpg" alt="">
+                <p class="number">2</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
