--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>StuntCoders</title>
 </head>
 <body>
-    <div class="heading-section">
+    <div class="header">
         <div class="container">
-            <img src="./images/header.jpg" alt="">
+            <div class="image">
+                <img src="./images/header.jpg" alt="">
+            </div>
             <div class="title">
                 <h1>88 miles per hour</h1>
                 <p>Where we're going we don't need roads!</p>
@@ -27,14 +29,51 @@
     <div class="grid-section">
         <div class="container">
             <div class="content">
-                <p class="number">1</p>
-                <div class="text">
+                <p id="number-1" class="number">1</p>
+                <div id="text-1" class="text">
                     <h2>MARTY YOU GOTTA</h2>
                     <p>There's that word again, heavy. Why are things so heavy in future? Is there a problem with the Earth's gravitational pull? We never would have fallen in love. No, get out of town, my mom thinks I'm going  camping with the guys. </p>
                 </div>
-                <img src="./images/step-1.jpg" alt="">
-                <img src="./images/step-2.jpg" alt="">
-                <p class="number">2</p>
+                <div id="image-1" class="image">
+                    <img src="./images/step-1.jpg" alt="">
+                </div>
+                <div id="image-2" class="image">
+                    <img src="./images/step-2.jpg" alt="">
+                </div>
+                <p id="number-2" class="number">2</p>
+                <div id="text-2" class="text">
+                    <h2>THIS IS SOME TITLE</h2>
+                    <p>Yes, yes, I'm George, George McFly, and I'm your density. I mean, I'm your destiny. My equipment, that reminds me, Marty, you better not hook up to the amplifier. There's a slight possibility for overload. Yeah, who are you? Don't worry, I'll take care of the lightning, you take care of your pop. By the way, what happened today, did he ask her out? No, no, George, look, it's just an act, right?</p>
+                </div>
+                <p id="number-3" class="number">3</p>
+                <div id="text-3" class="text">
+                    <h2>THIS IS SOME TITLE</h2>
+                    <p>There's a slight possibility for overload. Yeah, who are you? Don't worry, I'll take care of the lightning, you take care of your pop. By the way, what happened today, did he ask her out? No, no, George, look, it's just an act, right? Okay, so 9:00 you're strolling through the parking lot, you see us struggling in the car, you walk up, you open the door and you say, your line, George.</p>
+                </div>
+                <div id="image-3" class="image">
+                    <img src="./images/step-3-4.jpg" alt="">
+                </div>
+                <div id="text-4" class="text">
+                    <h2>OTHER TITLE</h2>
+                    <p>There's a slight possibility for overload.</p>
+                </div>
+                <p id="number-4" class="number">4</p>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <p class="hashtag">#ZEM<span>ECKIS</span></p>
+            <div class="content">
+                <div class="text">
+                    <div class="text-content">
+                        <h2>LOOK AT THE TIME</h2>
+                        <p>Yes, yes, I'm George, George McFly, and I'm your density. I mean, I'm your destiny. My equipment, that reminds me, Marty, you better not hook up to the amplifier. There's a slight possibility for overload. Yeah, who are you? Don't worry, I'll take care of the lightning, you take care of your pop. By the way, what happened today, did he ask her out? No, no, George, look, it's just an act, right?</p>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="./images/footer.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
